--- a/bookdata/pyproject.toml
+++ b/bookdata/pyproject.toml
@@ -9,6 +9,8 @@ author = "Shaquille Louisa"
 author_email = "shaq.louisa@gmail.com"
 
 [tool.briefcase.app.bookdata]
+primary_color = "#A9A9A9"
+primary_color_dark = "#808080"
 formal_name = "Book Data"
 description = "You can use this app to track the books you have read and compare your reading speed over time."
 long_description = """More details about the app should go here.
